# assist_service

./: .env.example  .env.local  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  Procfile  README.md  docker-compose.proxy.yml  docker-compose.yml  logging.dev.ini  pyproject.toml  pytest.ini  requirements.local.txt  requirements.txt
.cursor/rules/: avoid-using-dboperations-table.mdc  how-to-perform-auth-in-endpoints.mdc  inject-db-session-at-api-level.mdc  project-structure.mdc  responses-in-the-service-layer-and-api-layer.mdc  run-tests-with-make.mdc
.ebextensions/: 03_elb_timeout.config  04_cloudwatch.config
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: claude-code-review.yml  pylint.yml  tests.yml  update-assist-service.yml
app/: config.py  error_messages.py  main.py  utils.py  verify_uuid.py
app/alembic/: env.py
app/api/: __init__.py  endpoint_defaults.py  endpoints.py  paths.py  responses.py  wrapper.py
app/app_types/: .gitpod.yml
app/audience_segments/: constants.py
app/auth/: README.md  auth_sessions.py  auth_token.py  config.py  constants.py  create_auth_session_service.py  exceptions.py  routes.py  session.py  session_user.py  utils.py  verify_service.py
app/aws_services/: s3_service.py
app/bedrock/: bedrock.py  bedrock_stream.py  bedrock_types.py  dev_logging.py  retry.py  schemas.py  service.py  thinking.py  tools_use.py
app/bmdb/: constants.py
app/central_guidance/: constants.py  routes.py  schemas.py  service_index.py  service_rag.py
scripts/: docker_cleanup.sh
tests/: conftest.py  mock_request.py
(+244 files in other folders)
