[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-api"
version = "0.1.1"
description = "GCS Assist API"

dynamic = ["dependencies"]


[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.*",
    "pytest-mock==3.14.*",
    "httpx==0.28.1",
    "ruff==0.15.*",
    "pre-commit==4.6.0",
    "pytest-xdist==3.6.*",
    "streamlit==1.58.0",
    "plotly==6.8.0",
    "moto[s3]==5.2.2"
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint]
select = ["R", "E", "F", "I", "W", "N", "ASYNC",  "B", "A", "C4", "COM"]
ignore = ["F403" ,"RET504","N805", "COM812"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"app/types/__init__.py" = ["A005"]
"app/lib/datetime/*" = ["A005"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["scripts/api_tests"]
